--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     </section>
 
     <footer>Código por @dcuevasdev y diseño por @juandc</footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="./src/secrets.js"></script>
     <script src="./src/main.js"></script>
   </body>
