--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <form id="searchForm" class="header-searchForm">
         <input type="text" placeholder="Vengadores" />
-        <button>🔍</button>
+        <button id="searchBtn">🔍</button>
       </form>
     </header>
 
@@ -128,6 +128,7 @@
     <footer>Código por @dcuevasdev y diseño por @juandc</footer>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="./src/secrets.js"></script>
+    <script src="./src/node.js"></script>
     <script src="./src/main.js"></script>
     <script src="./src/navigation.js"></script>
   </body>
