--- a/index.html
+++ b/index.html
@@ -50,29 +50,7 @@
       <div class="liked-header">
         <h2 class="liked-title">Películas favoritas</h2>
       </div>
-      <article class="liked-movieList">
-        <div class="movie-container">
-          <img
-            src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-            class="movie-img"
-            alt="Nombre de la película"
-          />
-        </div>
-        <div class="movie-container">
-          <img
-            src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-            class="movie-img"
-            alt="Nombre de la película"
-          />
-        </div>
-        <div class="movie-container">
-          <img
-            src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-            class="movie-img"
-            alt="Nombre de la película"
-          />
-        </div>
-      </article>
+      <article class="liked-movieList"></article>
     </section>
 
     <section id="genericList" class="genericList-container inactive">
